--- a/Web Fundamentals/byui/byui.html
+++ b/Web Fundamentals/byui/byui.html
@@ -21,7 +21,7 @@
           alt="BYUI Campus"/>
     </main>
     <footer>
-        
+      <p>My First Web Page 20XX &copy</p>
     </footer>
   </body>
 </html>
