--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -60,10 +60,10 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">#463730ff</td>
-        <td class="secondary">#1f5673ff</td>
-        <td class="accent1">#759fbcff</td>
-        <td class="accent2">#90c3c8ff</td>
+        <td class="primary">#463730</td>
+        <td class="secondary">#1f5673</td>
+        <td class="accent1">#759fbc</td>
+        <td class="accent2">#90c3c8</td>
       </tr>
     </table>
 
@@ -73,11 +73,11 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: [Font Name here]
+      Heading Font: Permanent Marker, Radio Canada
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: [Font Name here]
+      Paragraph Font: Caveat
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
