--- a/wwr/index.html
+++ b/wwr/index.html
@@ -12,7 +12,7 @@
         <header>
 
             <a id="logo_link" href="index.html">
-                <img src=images/logo.png alt="Dry Oar Logo"/>
+                <img class="logo" src=images/logo.png alt="Dry Oar Logo"/>
             </a>
             <nav>
                 <a href="index.html">Home</a>
@@ -63,13 +63,13 @@
         <h3><a href="contactus.html">Contact Us</a></h3>
         <div class="social">
             <a href="https://facebook.com" target="_blank">
-                <img src="images/facebook.png" alt="fb icon">
+                <img class="icon" src="images/facebook.png" alt="fb icon">
             </a>
             <a href="https://twitter.com" target="_blank">
-                <img src="images/twitter.png" alt="twitter icon">
+                <img class="icon" src="images/twitter.png" alt="twitter icon">
             </a>
             <a href="https://instagram.com" target="_blank">
-                <img src="images/instagram.png" alt="instagram icon">
+                <img class="icon" src="images/instagram.png" alt="instagram icon">
             </a>
         </div>
         </footer>
