--- a/pictures_company/site-plan.html
+++ b/pictures_company/site-plan.html
@@ -10,8 +10,8 @@
   <body>
     <header>
       <h1>[Site name] Site Plan</h1>
-      <h2>FirstName LastName</h2>
-      <h2>WDD 130-[section]</h2>
+      <h2>Matias Schvindt</h2>
+      <h2>WDD 130-22</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
     <main>
@@ -20,17 +20,25 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>[Your purpose here]</p>  <!-- change this -->
+      <p>The purpose of this site is to show visitors the work we offer to clients
+        and the many ways you can be creative. The goal is to reach more people
+        with the service of a professional photographer and create unforgettable
+         memories, as they say, "a picture says more than a thousand words."</p>
+           <!-- change this -->
 
 
       <h3>Audience</h3>
-      <p>[Your audience here]</p>  <!-- change this -->
+      <p>The site is aimed at those people who seek to immortalize moments,
+        memories and experiences in photographs taken by a professional,
+        and in it, they will be able to find examples, previous projects,
+        as well as customer opinions.</p>
+            <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="#" alt="Logo image">
+      <img src="images\pictures_company_logo.jpg" alt="Logo image">
       <hr>
       <h2>
         Style Guide
@@ -44,13 +52,24 @@
       <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
 
       <!-- Copy and paste the URL to your finished palette below Make sure to paste it into both spots -->
-      Palette URL: <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c" target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
+      Palette URL: <a href="https://coolors.co/54c09f-eee7d0-8ca03d-396E94-aabd8c"
+       target="_blank">https://coolors.co/54c09f-eee7d0-8ca03d-396E94-aabd8c</a>
 
 
       <table class="colors">
-        <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
+        <tr>
+            <th>Primary</th
+                ><th>Secondary</th>
+                <th>Accent 1</th>
+                <th>Accent 2</th>
+            </tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">[#396E94]</td><td class="secondary">[#E7C24F]</td><td class="accent1">[#A43312]</td><td class="accent2"></td></tr>
+        <tr>
+            <td class="primary">#54c09f</td>
+            <td class="secondary">#eee7d0</td>
+            <td class="accent1">#8ca03d</td>
+            <td class="accent2">#396E94</td>
+        </tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
