--- a/pictures_company/site-plan.html
+++ b/pictures_company/site-plan.html
@@ -143,29 +143,61 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Make a memorable keepsake of your special moment!
+        We are a company that is dedicated to the field of photography in a personalized way, where we offer that your memories are recorded, and you can edit them to your liking.
+        At Pictures Company we work to improve every day, every photograph we take is a story and a lesson. For us, it is a pleasure that our clients choose us and give us their trust. Being part of their moments is one of the reasons why we do this work with love and dedication.
+        Our professionals will leave your memory engraved in different editions and photographic formats.
+        Over time children grow and adults change, every opportunity deserves to be remembered!
+        You can schedule a date in advance, contacting us via email or by phone, according to your convenience.
+        History of the company:
+        Pictures Company was founded in 2010 by Matías Schvindt, an amateur photographer, in the City of Buenos Aires, Argentina.
+        From a very young age, Matías was interested in the visual arts and was fascinated by photography. His grandfather Roberto gave him his first camera at the age of 13,
+        that was the beginning of his adventure, which has been going on for many years and experiences. Today he works with a team of professionals.
+
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src= "images\family-g2d1ac27f8_1280.jpg" alt="image for homepage">
+        <img src= "images\family-ga7c496b1e_1280.jpg" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Events</h3>
       <p>
-        [Written copy for the Page 2 here]
+        We make your wedding the one you always dreamed of.
+        The photos of the long-awaited baptism, for an eternal memory or the long-awaited birthday with family and friends.
+        Receive in your home the memories of your event ready to enjoy in just one week.
+        Do you have a business event?
+        Company Images is the solution. Because the years of experience we have are a guarantee that your business event will be exalted in the photos that will be taken.
+        Do you want your meeting to be unforgettable?
+        We put at your service the most modern technology in equipment and more than 10 years of experience that guarantee our knowledge.
+        We offer you a special and high-quality photographic service as your meeting requires.
+        We offer the best attention, quality and an excellent price.
+
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images\wedding-g6b3db51ae_1280.jpg" alt="image for page">
+        <img src="images\baptism-g999d678e7_1280.jpg" alt="image for page">
+        <img src="images\happy-birthday-gda058b537_1280.jpg" alt="image for page">
+        <img src="images\lecture-gc8c783f4d_1280.jpg" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Testimonials</h3>
       <p>
-        [Written copy for the Page 3 here]
+        Rebecca and John
+        When we confirmed with Pictures Company to be the company in charge of our wedding, we did not know her or have references to her, beyond the photos we saw on her Instagram and website, so it was a gamble. Today we already see the wedding and pre-wedding photos, and they are photos that we would never have thought to have in our lives. Those looks that last a second, the smiles of complicity, the hugs and all the love that there was that night were immortalized in the photos.
+        Laura and Jack
+        From the moment we contacted Pictures Company until the delivery of the project, everything has been 100% efficient!!! Also, we feel super comfortable with the camera pointing everywhere. What we would like to highlight about the photography work of Pictures Company is that they love to immortalize moments without many poses, that is why the photographs are very natural, well lived and with much more personality. Deliveries were fast. Honestly, highly recommended! Very professional.
+
+        Camila
+        Pictures Company took the photographs of my pregnancy, I hired the company based on the opinions I read on its website, and it turned out to be a success, a very professional company. He took us to nearby places, but unknown and very beautiful, where the photographer managed to take some film photos.
+        David
+        A professional service like the top of a pine tree! On my wedding day, he knew how to capture every gesture and every look, turning them into unique memories. Especially brilliant as a portrait and business/product photographer. You will not regret hiring their services.
+
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images\couple-gf6f38d709_1280.jpg" alt="image for page3">
+        <img src="images\bride-g886cf738b_1280.jpg" alt="image for page3">
+        <img src="images\man-g0a7e3cb4c_1280.jpg" alt="image for page3">
+        <img src="images\woman-g0cd85f111_1280.jpg" alt="image for page3">
 
       </ul>
       <hr>
