wireframes personal site

--- a/pictures_company/site-plan.html
+++ b/pictures_company/site-plan.html
@@ -118,10 +118,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Events <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Testimonials  <!-- change this -->
         </div>
 
         <div class="top">
@@ -211,19 +211,19 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="pictures_company\images\wireframe home.png" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Events</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="pictures_company\images\wireframe page2.png" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Testimonials</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="pictures_company\images\wireframe page3.png" alt="page 3 wireframe">
     </main>
   </body>
 
