--- a/wwr/contactus.html
+++ b/wwr/contactus.html
@@ -18,9 +18,9 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="thermal_waters.html" target="_blank" >Thermal waters</a>
-                <a href="site-plan-rafting.html" target="_blank" >Site Plan</a>
-                <a href="contactus.html" target="_blank" >Contact Us</a>
+                <a href="thermal_waters.html" >Thermal waters</a>
+                <a href="site-plan-rafting.html" >Site Plan</a>
+                <a href="contactus.html"  >Contact Us</a>
             </nav>
         </header>
         
