--- a/pictures_company/index.html
+++ b/pictures_company/index.html
@@ -7,9 +7,9 @@
     <title>Pictures Company</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
+<body id="content">
 
-    <div id="content">
+    <div>
         <header>
 
             <a id="logo_link" href="index.html">
